--- a/src/index.css
+++ b/src/index.css
@@ -39,4 +39,6 @@ body {
   color: var(--foreground);
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
+  width: 300px;
+  height: 500px;
 }
