--- a/src/index.css
+++ b/src/index.css
@@ -2,41 +2,44 @@
 @tailwind components;
 @tailwind utilities;
 
-:host, :root {
-  --purple-50: #f5f3ff;
-  --purple-100: #e0e7ff;
-  --purple-200: #A77BCA;
-  --purple-300: #6F2C91;
-  --purple-400: #4B1F6D;
-  --purple-500: #4B1F6D;
-  --purple-600: #4B1F6D;
-  --purple-700: #4B1F6D;
-  --purple-800: #4B1F6D;
-  --purple-900: #4B1F6D;
-  --highlight: #FFC107;
-  --background: var(--purple-50);
-  --foreground: var(--purple-900);
+:host,
+:root {
+    --purple-50: #f5f3ff;
+    --purple-100: #e0e7ff;
+    --purple-200: #a77bca;
+    --purple-300: #6f2c91;
+    --purple-400: #4b1f6d;
+    --purple-500: #4b1f6d;
+    --purple-600: #4b1f6d;
+    --purple-700: #4b1f6d;
+    --purple-800: #4b1f6d;
+    --purple-900: #4b1f6d;
+    --highlight: #ffc107;
+    --background: var(--purple-50);
+    --foreground: var(--purple-900);
 }
 
 @media (prefers-color-scheme: dark) {
-  :host, :root {
-    --purple-50: #4B1F6D;
-    --purple-100: #4B1F6D;
-    --purple-200: #4B1F6D;
-    --purple-300: #4B1F6D;
-    --purple-400: #4B1F6D;
-    --purple-500: #4B1F6D;
-    --purple-600: #6F2C91;
-    --purple-700: #A77BCA;
-    --purple-800: #e0e7ff;
-    --purple-900: #f5f3ff;
-    --background: var(--purple-50);
-    --foreground: var(--purple-900);
-  }
+    :host,
+    :root {
+        --purple-50: #4b1f6d;
+        --purple-100: #4b1f6d;
+        --purple-200: #4b1f6d;
+        --purple-300: #4b1f6d;
+        --purple-400: #4b1f6d;
+        --purple-500: #4b1f6d;
+        --purple-600: #6f2c91;
+        --purple-700: #a77bca;
+        --purple-800: #e0e7ff;
+        --purple-900: #f5f3ff;
+        --background: var(--purple-50);
+        --foreground: var(--purple-900);
+    }
 }
 
-#site-chattr, body {
-  color: var(--foreground);
-  background-color: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+#site-chattr,
+body {
+    color: var(--foreground);
+    background-color: var(--background);
+    font-family: Arial, Helvetica, sans-serif;
 }
